@startuml

title __BLOCK's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        package com.anniefraz.dissertation.gin.edit.block {
          class MoveBlockEdit {
              {static} - LOG : Logger
              - startBlockInt : int
              - endBlockInt : int
              - newLocation : int
              + MoveBlockEdit()
              # applyMethod()
              + toString()
          }
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        package com.anniefraz.dissertation.gin.edit.block {
          class RemoveBlockEdit {
              {static} - LOG : Logger
              - startBlockInt : int
              - endBlockInt : int
              + RemoveBlockEdit()
              + toString()
              # applyMethod()
          }
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        package com.anniefraz.dissertation.gin.edit.block {
          class SwapBlockEdit {
              {static} - LOG : Logger
              - blockOneStartNo : int
              - blockOneEndNo : int
              - blockTwoStartNo : int
              - blockTwoEndNo : int
              + SwapBlockEdit()
              # applyMethod()
              + toString()
          }
        }
      }
    }
  }
  

  MoveBlockEdit -up-|> SingleClassEdit
  RemoveBlockEdit -up-|> SingleClassEdit
  SwapBlockEdit -up-|> SingleClassEdit


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
